<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/textview_slot_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/null_sprite"
            app:layout_constraintEnd_toStartOf="@id/textview_slot_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/slot_1" />

        <ImageView
            android:id="@+id/textview_slot_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/null_sprite"
            app:layout_constraintBottom_toTopOf="@+id/textview_slot_5"
            app:layout_constraintEnd_toStartOf="@id/textview_slot_3"
            app:layout_constraintStart_toEndOf="@id/textview_slot_1"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/slot_2" />

        <ImageView
            android:id="@+id/textview_slot_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/null_sprite"
            app:layout_constraintBottom_toTopOf="@+id/textview_slot_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textview_slot_2"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/slot_3" />


        <ImageView
            android:id="@+id/textview_slot_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/null_sprite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textview_slot_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_slot_1"
            android:contentDescription="@string/slot_4" />

        <ImageView
            android:id="@+id/textview_slot_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/null_sprite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textview_slot_6"
            app:layout_constraintStart_toEndOf="@id/textview_slot_4"
            app:layout_constraintTop_toBottomOf="@+id/textview_slot_1"
            android:contentDescription="@string/slot_5" />

        <ImageView
            android:id="@+id/textview_slot_6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/null_sprite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textview_slot_5"
            app:layout_constraintTop_toBottomOf="@+id/textview_slot_1"
            android:contentDescription="@string/slot_6" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>